--- a/config/default.yml
+++ b/config/default.yml
@@ -28,6 +28,7 @@ linters:
       - Style/BlockNesting
       - Style/FileName
       - Style/IfUnlessModifier
+      - Style/IndentationConsistency
       - Style/IndentationWidth
       - Style/Next
       - Style/TrailingBlankLines
