Add EmptyControlStatment to default configuration
This was missed by c0ff27f.

--- a/config/default.yml
+++ b/config/default.yml
@@ -12,6 +12,9 @@ linters:
     enabled: true
     max_consecutive: 2
 
+  EmptyControlStatment:
+    enabled: true
+
   ExplicitDiv:
     enabled: true
 
