DRY up RedundantDiv with captures
The `RedundantDiv` linter included duplicate logic for both `class` and
`id` attributes. Introducing the concept of a capture allows us to
define a single matcher that can match both situations, and we can then
differentiate between the two matches in code. This results in DRYer
code.

To support this, add the concept of a matcher to the system, and define
the basic set of matchers needed to support this, along with the DSL
methods that make working with them convenient.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,11 @@ Metrics/MethodLength:
 Metrics/AbcSize:
   Max: 16
 
+# We break this rule to write S-expressions more succinctly.
+Style/AlignArray:
+  Exclude:
+    - 'lib/slim_lint/linter/**/*.rb'
+
 # Enforcing this results in a lot of unnecessary indentation.
 Style/ClassAndModuleChildren:
   Enabled: false
