Add spec for SexpVisitor
In the process of adding specs for this low-level helper, it was
discovered that the additional complexity handling block yielding
actually didn't work (and wasn't used anywhere), so it was removed.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,7 @@ Metrics/AbcSize:
 Style/AlignArray:
   Exclude:
     - 'lib/slim_lint/linter/**/*.rb'
+    - 'spec/slim_lint/**/*.rb'
 
 # Enforcing this results in a lot of unnecessary indentation.
 Style/ClassAndModuleChildren:
