Ignore additional RuboCop cops
These cops are reported when we extract Ruby code from multiline
control/output statements, e.g.

    = link_to 'Link',
              url: some_url

The easiest way to get around it is to just ignore these cops.

--- a/config/default.yml
+++ b/config/default.yml
@@ -34,9 +34,11 @@ linters:
       - Lint/EndAlignment
       - Lint/Void
       - Metrics/LineLength
+      - Style/AlignHash
       - Style/AlignParameters
       - Style/BlockNesting
       - Style/FileName
+      - Style/FirstParameterIndentation
       - Style/IfUnlessModifier
       - Style/IndentationConsistency
       - Style/IndentationWidth
