--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -4,6 +4,11 @@ PreCommit:
   BundleCheck:
     enabled: true
 
+  ExecutePermissions:
+    enabled: true
+    exclude:
+      - 'bin/slim-lint'
+
   HardTabs:
     enabled: true
 
