Fix EmptyControlStatement spelling
Was originally `EmptyControlStatment`

--- a/config/default.yml
+++ b/config/default.yml
@@ -15,7 +15,7 @@ linters:
     enabled: true
     max_consecutive: 2
 
-  EmptyControlStatment:
+  EmptyControlStatement:
     enabled: true
 
   ExplicitDiv:
