Update RuboCop 0.41.1 -> 0.42.0 for Travis

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -59,6 +59,9 @@ Style/IfUnlessModifier:
 Style/Lambda:
   Enabled: false
 
+Style/NumericPredicate:
+  Enabled: false
+
 # Prefer curly braces except for %i/%w/%W, since those return arrays.
 Style/PercentLiteralDelimiters:
   PreferredDelimiters:
