Add Multiline cops to ignored_cops list (#46)
These cops don't make sense since they run on the post-slim (html)
output, any attempt to fix the errors these cops produce is futile.

--- a/config/default.yml
+++ b/config/default.yml
@@ -45,6 +45,13 @@ linters:
       - Style/IfUnlessModifier
       - Style/IndentationConsistency
       - Style/IndentationWidth
+      - Style/MultilineArrayBraceLayout
+      - Style/MultilineAssignmentLayout
+      - Style/MultilineHashBraceLayout
+      - Style/MultilineMethodCallBraceLayout
+      - Style/MultilineMethodDefinitionBraceLayout
+      - Style/MultilineMethodCallIndentation
+      - Style/MultilineOperationIndentation
       - Style/Next
       - Style/TrailingBlankLines
       - Style/TrailingWhitespace
