Disable Metrics/BlockLength RuboCop cop by default
Closes #49

--- a/config/default.yml
+++ b/config/default.yml
@@ -35,6 +35,7 @@ linters:
       - Lint/BlockAlignment
       - Lint/EndAlignment
       - Lint/Void
+      - Metrics/BlockLength
       - Metrics/LineLength
       - Style/AlignHash
       - Style/AlignParameters
