Add RuboCop 0.47.0 compatibility
A `Node` classes reorganization in RuboCop broke compatibility with
slim lint. This PR allows to use slim-lint with RuboCop 0.47.0

Ref: bbatsov/rubocop@48f1637eb36575a95b2004fecd3212d848d64f59

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,10 @@ Lint/AssignmentInCondition:
 Lint/Void:
   Enabled: false
 
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*.rb'
+
 Metrics/LineLength:
   Max: 100
 
