--- a/config/default.yml
+++ b/config/default.yml
@@ -35,9 +35,11 @@ linters:
     # WARNING: If you define this list in your own .slim-lint.yml file, you'll
     # be overriding the list defined here.
     ignored_cops:
+      - Layout/AlignArray
       - Layout/AlignHash
       - Layout/AlignParameters
       - Layout/FirstParameterIndentation
+      - Layout/IndentArray
       - Layout/IndentationConsistency
       - Layout/IndentationWidth
       - Layout/MultilineArrayBraceLayout
