--- a/config/default.yml
+++ b/config/default.yml
@@ -42,13 +42,14 @@ linters:
     # WARNING: If you define this list in your own .slim-lint.yml file, you'll
     # be overriding the list defined here.
     ignored_cops:
-      - Layout/AlignArguments
-      - Layout/AlignArray
-      - Layout/AlignHash
-      - Layout/AlignParameters
+      - Layout/ArgumentAlignment
+      - Layout/ArrayAlignment
+      - Layout/BlockAlignment
       - Layout/EmptyLineAfterGuardClause
+      - Layout/EndAlignment
+      - Layout/FirstArrayElementIndentation
       - Layout/FirstParameterIndentation
-      - Layout/IndentArray
+      - Layout/HashAlignment
       - Layout/IndentationConsistency
       - Layout/IndentationWidth
       - Layout/InitialIndentation
@@ -59,10 +60,9 @@ linters:
       - Layout/MultilineMethodCallIndentation
       - Layout/MultilineMethodDefinitionBraceLayout
       - Layout/MultilineOperationIndentation
-      - Layout/TrailingBlankLines
+      - Layout/ParameterAlignment
+      - Layout/TrailingEmptyLines
       - Layout/TrailingWhitespace
-      - Lint/BlockAlignment
-      - Lint/EndAlignment
       - Lint/Void
       - Metrics/BlockLength
       - Metrics/BlockNesting
