Remove Style/IdenticalConditionalBranches from default cops (#113)
* Fix #99

Do not run the  Style/IdenticalConditionalBranches cop by default since it causes false-positives as reported in #99

* Remove trailing whitespace

Co-authored-by: Shane da Silva <shane@dasilva.io>

--- a/config/default.yml
+++ b/config/default.yml
@@ -69,6 +69,7 @@ linters:
       - Metrics/BlockNesting
       - Naming/FileName
       - Style/FrozenStringLiteralComment
+      - Style/IdenticalConditionalBranches
       - Style/IfUnlessModifier
       - Style/Next
       - Style/WhileUntilModifier
