Ignore Style/WhileUntilDo RuboCop lint
This is an issue because Slim inserts the `do` after `while` loops in
control statements:

https://github.com/slim-template/slim/blob/1f3bcf011877/lib/slim/do_inserter.rb#L10-L18

Rather than try and hack around this, simply ignore the lint.

--- a/config/default.yml
+++ b/config/default.yml
@@ -72,6 +72,7 @@ linters:
       - Style/IdenticalConditionalBranches
       - Style/IfUnlessModifier
       - Style/Next
+      - Style/WhileUntilDo
       - Style/WhileUntilModifier
 
   Tab:
