Linter for embedded engines (#120)
* add embedded_engines linter

* update document

* fix test

disable EmbeddedEngines by default

fix test

* disable EmbeddedEngines by default

* fix README.md

--- a/config/default.yml
+++ b/config/default.yml
@@ -18,6 +18,10 @@ linters:
   ControlStatementSpacing:
     enabled: true
 
+  EmbeddedEngines:
+    enabled: false
+    forbidden_engines: []
+
   EmptyControlStatement:
     enabled: true
 
