Ignore cop Layout/LineEndStringConcatenationIndentation (#130)
This cop was added recently and since the ruby extracted from slim templates does not maintain the original format, it should be ignored by default.

--- a/config/default.yml
+++ b/config/default.yml
@@ -58,6 +58,7 @@ linters:
       - Layout/IndentationConsistency
       - Layout/IndentationWidth
       - Layout/InitialIndentation
+      - Layout/LineEndStringConcatenationIndentation
       - Layout/LineLength
       - Layout/MultilineArrayBraceLayout
       - Layout/MultilineAssignmentLayout
