Add InstanceVariables linter (#174)
Hello! I would like to add a linter to detect instance variables in Slim
templates. Replacing them with local variables is often encouraged in
Rails partial templates, but here I expect using the `include`
configuration option to define the targeted files so this linter can be
used together with not only partial templates but any glob pattern you
like.

The linter itself uses the work done on the Rubocop linter - namely the
Ruby code extractor. This linter parses the extracted ruby code and
searches for instance variables in there. It also uses the extracted
code source map to report proper line numbers.


![image](https://github.com/sds/slim-lint/assets/462701/6deb617c-5847-4087-8b96-7f3879e6958f)

This closes #155. Thanks!

--- a/config/default.yml
+++ b/config/default.yml
@@ -32,6 +32,12 @@ linters:
     enabled: false
     max: 300
 
+  InstanceVariables:
+    enabled: false
+    include:
+      # Include only partial templates by default
+      - app/views/**/_*.html.slim
+
   LineLength:
     enabled: true
     max: 80
